--- a/ContentManagmentSystem/ContentManagmentSystem/app/templates/app/layout.html
+++ b/ContentManagmentSystem/ContentManagmentSystem/app/templates/app/layout.html
@@ -19,14 +19,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="/" class="navbar-brand">Application name</a>
+                <a href="/" class="navbar-brand">Text Processor</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="{% url 'home' %}">Home</a></li>
+                    <!--<li><a href="{% url 'home' %}">Home</a></li>
                     <li><a href="{% url 'about' %}">About</a></li>
-                    <li><a href="{% url 'contact' %}">Contact</a></li>
-                    <li><a href="{% url 'textbox' %}">textbos</a></li>
+                    <li><a href="{% url 'contact' %}">Contact</a></li><-->
+                    <li><a href="{% url 'textbox' %}">Input Text Form</a></li>
                 </ul>
                 {% include 'app/loginpartial.html' %}
             </div>
