added thingys for text reporting and summarizing

--- a/ContentManagmentSystem/ContentManagmentSystem/app/templates/app/layout.html
+++ b/ContentManagmentSystem/ContentManagmentSystem/app/templates/app/layout.html
@@ -37,7 +37,7 @@
 {% block content %}{% endblock %}
         <hr/>
         <footer>
-            <p>&copy; {{ year }} - My Django Application</p>
+            <p>&copy; {{ "2019" }} - My Django Application</p>
         </footer>
     </div>
 
