fixed issue i created

--- a/ContentManagmentSystem/ContentManagmentSystem/app/templates/app/output.html
+++ b/ContentManagmentSystem/ContentManagmentSystem/app/templates/app/output.html
@@ -10,7 +10,7 @@
         {{ output }}
     </pre>
     <br />
-    <h3>Your Text Summarized</h3>
+    <h3>Key Phrases</h3>
     <pre>
         {{ summarizedText }}
     </pre>
