--- a/ContentManagmentSystem/ContentManagmentSystem/app/templates/app/index.html
+++ b/ContentManagmentSystem/ContentManagmentSystem/app/templates/app/index.html
@@ -15,27 +15,25 @@
     <p><a href="/textbox" class="btn btn-primary btn-large">Process your text now! &raquo;</a></p>
 </div>
 
-<!--<div class="row">
+<div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Spell Check</h2>
         <p>
-            Django gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Text Processor will help you saving times in check all you misspelled words
         </p>
         <p><a class="btn btn-default" href="https://djangobook.com/django-tutorials/">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>The Python Package Index is a repository of software for the Python programming language.</p>
+        <h2>Give you the key points</h2>
+        <p>In hurry and want to get the key points of a super long paragraphs. Text Processor will helps you saving a lot of time reading the whole thing.</p>
         <p><a class="btn btn-default" href="https://pypi.org/">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Microsoft Azure</h2>
-        <p>You can easily publish to Microsoft Azure using Visual Studio. Find out how you can host your application using a free trial today.</p>
+        <h2>Check the difficulty</h2>
+        <p>Text Processor helps you analyze the difficult level of your text.</p>
         <p><a class="btn btn-default" href="http://azure.microsoft.com">Learn more &raquo;</a></p>
     </div>
-</div>#}
-    -->
+</div>
+
 
 {% endblock %}
