--- a/ContentManagmentSystem/ContentManagmentSystem/app/static/app/content/bootstrap.css
+++ b/ContentManagmentSystem/ContentManagmentSystem/app/static/app/content/bootstrap.css
@@ -4928,22 +4928,25 @@ a.list-group-item.active > .badge,
 }
 
 .jumbotron {
-  padding: 30px;
-  margin-bottom: 30px;
-  font-size: 21px;
-  font-weight: 200;
-  line-height: 2.1428571435;
-  color: inherit;
-  background-color: #eeeeee;
+    padding: 30px;
+    margin-bottom: 30px;
+    font-size: 21px;
+    font-weight: 200;
+    line-height: 2.1428571435;
+    color: inherit;
+    background-color: #900C3F;
 }
 
 .jumbotron h1 {
   line-height: 1;
-  color: inherit;
+  color: white;
+  font-weight: bolder;
 }
 
 .jumbotron p {
   line-height: 1.4;
+  color: white;
+
 }
 
 .container .jumbotron {
