--- a/ContentManagmentSystem/ContentManagmentSystem/app/templates/app/index.html
+++ b/ContentManagmentSystem/ContentManagmentSystem/app/templates/app/index.html
@@ -12,26 +12,26 @@
 <div class="jumbotron">
     <h1>Text Processor</h1>
     <p class="lead">Spell check your text, summarize, and check reading level.<p>
-    <p><a href="/textbox" class="btn btn-primary btn-large">Process your text now! &raquo;</a></p>
+    <p><a href="/textbox" class="btn btn-primary btn-large">Process your text now!</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Spell Check</h2>
-        <p>
-            Text Processor will help you saving times in check all you misspelled words
+        <h2 class="feature">Spell Check</h2>
+        <p class="feature1">
+            Text Processor will help you saving time in checking all your misspelled words.
         </p>
-        <p><a class="btn btn-default" href="https://djangobook.com/django-tutorials/">Learn more &raquo;</a></p>
+    
     </div>
     <div class="col-md-4">
-        <h2>Give you the key points</h2>
-        <p>In hurry and want to get the key points of a super long paragraphs. Text Processor will helps you saving a lot of time reading the whole thing.</p>
-        <p><a class="btn btn-default" href="https://pypi.org/">Learn more &raquo;</a></p>
+        <h2 class="feature">Give you the key points</h2>
+        <p class="feature1">In a hurry and want to get the critical points of super long paragraphs. Text Processor will help you save a lot of time reading the whole thing.</p>
+     
     </div>
     <div class="col-md-4">
-        <h2>Check the difficulty</h2>
-        <p>Text Processor helps you analyze the difficult level of your text.</p>
-        <p><a class="btn btn-default" href="http://azure.microsoft.com">Learn more &raquo;</a></p>
+        <h2 class="feature">Check the difficulty</h2>
+        <p class="feature1">Text Processor helps you analyze the difficulty level of your text.</p>
+    
     </div>
 </div>
 
