--- a/ContentManagmentSystem/ContentManagmentSystem/app/templates/app/textbox.html
+++ b/ContentManagmentSystem/ContentManagmentSystem/app/templates/app/textbox.html
@@ -10,10 +10,11 @@
 <div>    
     <br />
     <form method="POST" class="text-editor">
-        {% csrf_token %}
+        {% csrf_token %} <br /><br />
         {{ form.as_p }}
-
+        <br />
         <button type="submit" class="save btn btn-default">Process</button>
+        <br /><br />
     </form>
 </div>
 {% endblock %}
